Export sun.security.x509 for self signed certificates.